Update Sequence Guided Tour to focus on procedures only

--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-04-last-shapes.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-04-last-shapes.mdx
@@ -40,3 +40,7 @@ Complete the house by adding in the rectangle and triangle. Here are the relevan
 </Accordion>
 
 Compile and run your program and check that you can see the house.
+
+---
+
+If you're interested in exploring this a bit further, feel free to check the [Graphical methods to use](/book/part-1-instructions/1-sequence/3-guided-tour/01-05-graphical-methods/) page for a rundown of some other useful procedures you can use. Try adding some more elements to the scene, or changing it completely!
