--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-05-graphical-methods.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-05-graphical-methods.mdx
@@ -1,12 +1,10 @@
 ---
-title: Graphical method to use
+title: Graphical methods to use
 sidebar:
-    label: " - Graphical method to use"
+    label: " - Graphical methods to use"
 ---
 
-Drawing things to the screen can help you make much more interactive programs. The following methods will give you a start building graphical programs.
-
-You can use the same terminal methods as described previously to read values from the user in the terminal. Then you also have access to the following methods to perform drawing actions:
+Here's a list of some useful graphical methods SplashKit provides. You'll find these come in handy when going through future tasks, feel free to refer to this page whenever needed.
 
 ```c++
 // Open a window to draw to
