--- a/src/content/docs/book/part-1-instructions/1-sequence/4-activities/03-0-explore.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/4-activities/03-0-explore.mdx
@@ -3,7 +3,6 @@ title: Test your knowledge
 ---
 import { YouTube } from 'astro-embed';
 
-Having explored this leg of the journey you are now approaching a rest stop and a chance to practice and reflect. Test what you have learnt by creating one or more of the following programs:
+Having explored this leg of the journey you are now approaching a rest stop and a chance to practice and reflect. Test what you have learnt by creating the following program:
 
-- [Draw a scene](/book/part-1-instructions/1-sequence/3-explore/03-1-drawing) using SplashKit graphics.
-- [Dynamically write content to the terminal](/book/part-1-instructions/1-sequence/3-explore/03-2-terminal).
+- [Draw an animated scene](/book/part-1-instructions/1-sequence/4-activities/03-1-drawing) using SplashKit graphics.
