--- a/src/content/docs/book/part-1-instructions/1-sequence/4-activities/03-1-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/4-activities/03-1-drawing.mdx
@@ -6,12 +6,11 @@ sidebar:
 import NoCopy from '/src/components/NoCopy.astro'
 
 <NoCopy>
-For this task you can build on the ideas from the [house drawing](/book/part-1-instructions/1-sequence/3-guided-tour/01-00-house-drawing) tour. You may also find it useful to read about [drawing in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-2-graphics/#drawing-to-a-window) and [playing sound effects in SplashKit](/book/part-1-instructions/1-sequence/2-trailside/11-3-audio) for this task.
+For this task you can build on the ideas from the [house drawing](/book/part-1-instructions/1-sequence/3-guided-tour/01-00-house-drawing) tour. You may also find it useful to read about [drawing in SplashKit](/book/part-1-instructions/1-sequence/5-reference/11-2-graphics/#drawing-to-a-window) and [playing sound effects in SplashKit](/book/part-1-instructions/1-sequence/5-reference/11-3-audio/) for this task.
 
 Create a program that draws a custom scene, picture, or animation using shapes and colors from SplashKit - while sticking with just a single sequence.
 
 - Make sure to draw at least 3 shapes, or have a few steps in your animation
-- Use some dynamically calculated values (for instance random colours or sizes)
 
 This could be a simple image like a car or flower shape, or you could combine text, delays, drawing, and sound effects to create an animation.
 
@@ -19,7 +18,7 @@ For example, the following is a starter/trailer for some scary game. Use this fo
 
 ```txt
 You are approaching what looks like a haunted house
-(delay - scale by speed scale factor)
+(delay)
 (play door creak sound effect - delay scaled)
 It is dark in here...
 (delay then print) Spiders everywhere!
