Remove `return 0;` from Part 0, Sequence, and Data

--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-01-main-function.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-01-main-function.mdx
@@ -18,7 +18,6 @@ There can be many functions/procedures in the one program, so we also need to in
 
 - is a function that contains our program's code.
 - runs when the program is started.
-- should end with `return 0;`
 
 :::
 
@@ -35,10 +34,9 @@ Let's start writing our program by getting our `main` function set up!
     int main()
     {
         // The code within these braces is run when the program starts
-        return 0;
     }
     ```
-    We will go into details on how the `main` function works in the [next part](/book/part-2-organised-code/1-structuring-code/0-overview). For now, you will just need to enter this code as is, and make sure any instructions you want to run occur between the starting `{` and the `return 0; }` command that appears at the end.
+    We will go into details on how the `main` function works in the [next part](/book/part-2-organised-code/1-structuring-code/0-overview). For now, you will just need to enter this code as is, and make sure any instructions you want to run occur between the starting `{` and the `}` that appears at the end.
 
     We now have an empty program set up, ready for us to add instructions in to.
 </Steps>
