Sequence reference C# -> C++ iniital conversion (draft)  - no images updated yet, a few references to methods/C# left

--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/01-sequence.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/01-sequence.mdx
@@ -99,17 +99,15 @@ This design process is known as **computational thinking**. You need to think ab
 In this chapter, you will learn to create the following **building blocks**:
 
 - [Programs](/book/part-1-instructions/1-sequence/2-trailside/00-program) the user can run.
-- [Variables](/book/part-1-instructions/1-sequence/2-trailside/07-variable) to store values.
 
 You will be able to use the following **building blocks** that others have created:
 
-- [Methods](/book/part-1-instructions/1-sequence/2-trailside/02-method) that can be called to perform an action or fetch/calculate a value.
+- [Procedures](/book/part-1-instructions/1-sequence/2-trailside/02-procedure) that can be called to perform an action or fetch/calculate a value.
 - [Libraries](/book/part-1-instructions/1-sequence/2-trailside/10-library) that provide you with building blocks others have created.
 
 You will be able to instruct the computer to:
 
-- [Call methods](/book/part-1-instructions/1-sequence/2-trailside/03-method-call) to run the instructions they contain.
-- Store a value in a variable (called [assigning a variable a value](/book/part-1-instructions/1-sequence/2-trailside/08-assignment-statement)).
+- [Call procedures](/book/part-1-instructions/1-sequence/2-trailside/03-procedure-call) to run the instructions they contain.
 
 By putting these together you will be able to build some small programs that show visualisations and calculate values.
 Once you have had practice with this, the next step in your journey will explore how we can make programs more dynamic by controlling the sequence of actions.
