--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/00-program.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/00-program.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Program"
 ---
+import CommmonLink from '/src/components/CommonLink.astro'
 
 In most software projects the top-level building block you are aiming to create is a **program**. A program is something the user can **run** to get the computer to do something.
 
@@ -33,6 +34,7 @@ In a C++ project, you have one source code file that will contain the program's 
 
 TODO:
 ![The simplified syntax for a C++ program](./images/program.png "The simplified for a C++ program")
+<CommmonLink type="syntaxDiagramGuide"/>
 :::
 
 Each program starts with an optional list of **header includes**.
