--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/03-procedure-call.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/03-procedure-call.mdx
@@ -2,6 +2,7 @@
 title: "Procedure Call"
 ---
 import MySwiper from '/src/components/react/myswiper.jsx';
+import CommmonLink from '/src/components/CommonLink.astro'
 import Slide1 from './images/procedure-call/Slide1.png';
 import Slide2 from './images/procedure-call/Slide2.png';
 import Slide3 from './images/procedure-call/Slide3.png';
@@ -142,6 +143,7 @@ A procedure call looks like a single instruction in your source code.
 The C# syntax for one is structured like this:
 
 ![The syntax of a procedure call](./images/procedure-call.png "The syntax of a procedure call")
+<CommmonLink type="syntaxDiagramGuide"/>
 :::
 
 A procedure call consists of a procedure's name followed by an opening parenthesis, zero or more arguments (delimited by commas), a closing parenthesis, then a semicolon.
