--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/05-literal.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/05-literal.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Literal"
 ---
+import CommmonLink from '/src/components/CommonLink.astro'
 
 Programs are instructions and data, so we need a way to capture data within our code.
 
@@ -21,6 +22,7 @@ The diagram below shows the syntax for the different literal values you can ente
 
 :::tip[Syntax]
 ![The syntax of a literal.](./images/program-creation/LiteralSyntax.png "The syntax of a literal")
+<CommmonLink type="syntaxDiagramGuide"/>
 :::
 
 Data falls into one of two categories:
