--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/10-library.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/10-library.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Library"
 ---
+import CommmonLink from '/src/components/CommonLink.astro'
 
 A library is a collection of reusable code building blocks. Each programming language comes with a standard set of libraries, and your programs can make use of the code available in these and other libraries.
 
@@ -20,6 +21,7 @@ We will explore creating our own libraries later in our journey. For now, you ca
 
 :::tip[Syntax]
 ![The syntax for a C# program.](./images/program.png "The syntax for a C# program")
+<CommmonLink type="syntaxDiagramGuide"/>
 :::
 
 In a C# project, the **using clause** lets you access the code in a library. Once you add this directive you will be able to directly call any of the methods within that part of the library.
