Sequence/Reference fixes continued

--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/00-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/00-overview.mdx
@@ -4,6 +4,6 @@ title: Overview
 
 Let's get coding. Programming is a practical skill, so one of the best ways to learn this is through doing it.
 
-We'll start by learning to use graphical methods to build a house drawing,
+We'll start by learning to use graphical procedures to build a house drawing,
 
 At the end of this you should feel confident building small programs that follow a fixed set of instructions.
