--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-03-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-03-drawing.mdx
@@ -11,7 +11,7 @@ With the window appearing, the next step is to draw some shapes. To start, let's
 
 *How do you position a shape on the screen?*
 
-Your window is organised to have a number of discrete picture elements (small dots called pixels) that you can draw to. When you created the window you said how many pixels wide it will be, and how many pixels high. The different drawing methods will all need you to pass in coordinates for where the shape should appear.
+Your window is organised to have a number of discrete picture elements (small dots called pixels) that you can draw to. When you created the window you said how many pixels wide it will be, and how many pixels high. The different drawing procedures will all need you to pass in coordinates for where the shape should appear.
 
 ![Pixel locations are based on x and y locations](../5-reference/images/window-pixels.png)
 
