--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-01-main-function.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-01-main-function.mdx
@@ -27,7 +27,7 @@ Let's start writing our program by getting our `main` function set up!
 <Steps>
 1. Open a folder in VS Code, create a new `.cpp` file, and open it. Refer [here](/book/part-0-getting-started/1-building-programs/3-guided-tour/3-first-project/) if you get stuck.
 
-2. Let's add the [#include directive](/book/part-1-instructions/1-sequence/0-panorama/1-method-library) to access the SplashKit library, and an empty `main` function. Below is some code you can use:
+2. Let's add the [#include directive](/book/part-1-instructions/1-sequence/5-reference/10-library/#in-c) to access the SplashKit library, and an empty `main` function. Below is some code you can use:
     ```cpp
     #include "splashkit.h"
 
