--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/00-program.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/00-program.mdx
@@ -32,13 +32,12 @@ To master these concepts you will need to memorise the syntax so that you can st
 :::tip[Syntax]
 In a C++ project, you have one source code file that will contain the program's main code. The following illustration shows the structure of the syntax for this, for the concepts we've covered so far.
 
-TODO:
-![The simplified syntax for a C++ program](./images/program.png "The simplified for a C++ program")
+![The simplified syntax for a C++ program](./images/program-cpp-simple.png "The simplified syntax for a C++ program")
 <CommmonLink type="syntaxDiagramGuide"/>
 :::
 
 Each program starts with an optional list of **header includes**.
-These allow you to tell the compiler to include extra files that declare new [procedures and functions](/book/part-1-instructions/1-sequence/2-trailside/02-method) that you call in your program.
+These allow you to tell the compiler to include extra files that declare new [procedures and functions](/book/part-1-instructions/1-sequence/5-reference/02-procedure) that you call in your program.
 
 
 After this you can declare a `main` function - then between the braces (`{ }`), you provide a list of instructions that each end with a semicolon (`;`).
@@ -84,7 +83,7 @@ int main()
 
 :::tip[Code Comments]
 C++ source code is [abstracted](/book/part-0-getting-started/1-building-programs/5-reference/6-source-code/#programming-with-a-third-generation-language) to make it more understandable for humans, but ultimately it is still written for computers.
-Because of this, C++ and virtually all programming languages include syntax for writing [**code comments**](/book/part-1-instructions/1-sequence/2-trailside/09-comments).
+Because of this, C++ and virtually all programming languages include syntax for writing [**code comments**](/book/part-1-instructions/1-sequence/5-reference/09-comments).
 
 In the code above the line starting with `//` is a code comment and will be ignored by the compiler.
 
@@ -93,14 +92,14 @@ You can also write "block comments" (multi-line comments) by starting them with 
 
 Data, which we'll explore in more detail in the next chapter, is also key within every program. Can you spot data in the examples above?
 
-We use data to capture information we need a program to work with. The data in the above examples are all **fixed** or [literal](/book/part-1-instructions/1-sequence/2-trailside/05-literal) values. That means these values can not change when the program runs. They are fixed, being literally the value that appears in the code.
+We use data to capture information we need a program to work with. The data in the above examples are all **fixed** or [literal](/book/part-1-instructions/1-sequence/5-reference/05-literal) values. That means these values can not change when the program runs. They are fixed, being literally the value that appears in the code.
 
 :::note[Summary]
 
 - You can create something the user can run from a program's **source code**.
 - Most importantly, you can't really *see* the program in the code. The program is **all** of the code together.
 - The program has an **entry point** that indicates where the program’s instructions start -- in this case that is the first instruction in the `main` function.
-- Your program can use code from [libraries](/book/part-1-instructions/1-sequence/2-trailside/10-library), giving it access to building blocks others have created.
+- Your program can use code from [libraries](/book/part-1-instructions/1-sequence/5-reference/10-library), giving it access to building blocks others have created.
 - Data is central to a program.
 
 :::
