--- a/src/content/docs/book/part-1-instructions/1-sequence/5-reference/05-literal.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/5-reference/05-literal.mdx
@@ -40,7 +40,7 @@ For each of the follow, identify if the value listed or used in an instruction i
 1. `19`
 2. `"19"`
 3. `9a`
-4. `WriteLine("Hello World");`
+4. `write_line("Hello World");`
 5. `"\n"`
 6. `'c'`
 7. `'character'`
