--- a/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-03-drawing.mdx
+++ b/src/content/docs/book/part-1-instructions/1-sequence/3-guided-tour/01-03-drawing.mdx
@@ -1,9 +1,10 @@
 ---
-title: Step 3 - Drawing Shapes
+title: Step 4 - Drawing Shapes
 sidebar:
   label: " - Drawing Shapes"
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
+import { Steps } from '@astrojs/starlight/components';
 
 With the window appearing, the next step is to draw some shapes. To start, let's get the hill drawing.
 
@@ -25,6 +26,7 @@ The best way to plan this out is to sketch what you want and to try to figure ou
 
 ![House plan illustration](./images/house-plan.png)
 
+<Steps>
 1. Start by clearing the screen and drawing the filled ellipse.
 
     :::tip
@@ -85,9 +87,11 @@ The best way to plan this out is to sketch what you want and to try to figure ou
     </Accordion>
 
 3. Compile and run again. You should now see the white background and the green hill.
+</Steps>
 
 :::note[Are these hard-coded values ok?]
 
 For this program we are just wanting to draw some fixed shapes, so we can tolerate these hard-coded values for now.
 
+We'll look at improving this later on, in [Dynamic House Drawing](/book/part-1-instructions/2-data/3-guided-tour/02-00-house-drawing/).
 :::
